# pQuant

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Snakefile  benchmark.cpp  onetime_run.sh  run_all.sh  run_single_step.sh  slurm-jobscript.sh  submit_sim_snakemake.sh  submit_snakemake.sh
Docker/: Dockerfile
config/: config.yaml  config_toy.yaml
dataset/five_genes/: five_gene_reads_shorten.fa  five_gene_reference.fa
include/: Encode.h  Functions.h  MainAlgorithmSet.h  PQuantParams.h  PlainFunc.h  Sequence.h  Task.h  data-analysis.h
include/enc/: Functions.h
include/entropy/: Entropy.h
include/func/: Entropy.h  Functions.h  PQuantParams.h  Sequence.h
include/test/: Test.h
include/util/: Define.h  FileReader.h  KmerTable.h  util.h
job_submit/: batch.sh  run_all.sh  run_single_step.sh
src/: Functions.cpp  MainAlgorithmSet.cpp  PlainFunc.cpp  README.md  Sequence.cpp  Task.cpp  data-analysis.cpp  main.cpp
src/enc/: Functions.cpp
src/entropy/: Entropy.cpp
src/func/: Entropy.cpp  Functions.cpp  PQuantParams.cpp  Sequence.cpp
src/test/: Test.cpp
src/util/: FileReader.cpp  KmerTable.cpp  util.cpp
summary/: summary.ipynb  summary.py  utils.py
test/: test.cpp
workflow/: README.md  Snakefile  execute_workflow.sh  paper_figures.ipynb  requirements.txt
workflow/config/: README.md  config.yaml  samples_paired_de.csv
workflow/rules/: README.md  align.smk  common.smk  pQuant_enc.smk
workflow/scripts/: README.md  collapse_kallisto_counts.py  concatenate_paired_end_reads.py  create_pquant_kallisto_star_references_from_gtf.py  subset_fastq_to_n_reads.sh
workflow/simple/: README.md  config.yaml
